virt01/automated/ai/speaches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speaches-ingress
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: speaches.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: speaches
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - speaches.k3s.nf.lab
    secretName: speaches-tls
